# SkyUI-Recent

./: .gitignore  README.md  SkyUIRecentSort.esp  build_mod.ps1  nexusreadme.md  package_mod.sh
.github/workflows/: build.yml  release.yml
Interface/Translations/: SkyUIRecentSort_MCM_ENGLISH.txt
espfe/: README.md
interface/i4/: SkyUIRecentSort.i4.json
interface/skyui/: config.txt
papyrus/Scripts/Source/: SUIR_AcquiredBridge.psc
scripts/source/: Form.psc  Quest.psc  SKI_ConfigBase.psc  SkyUIRecentSort_MCM.psc  SkyUIRecentSort_Quest.psc
skse_plugin/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
skse_plugin/ports/commonlibsse-ng-flatrim/: portfile.cmake  vcpkg.json
skse_plugin/ports/fast-cpp-csv-parser/: portfile.cmake
skse_plugin/src/: AcquiredTracker.cpp  AcquiredTracker.h  ConfigInjector.cpp  ConfigInjector.h  Hooks.cpp  Hooks.h  PCH.h  PapyrusBindings.cpp  PapyrusBindings.h  ScaleformExtension.cpp  ScaleformExtension.h  Serialization.cpp  Serialization.h  main.cpp
tools/: generate_esp.py
